--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -42,9 +42,9 @@ jobs:
       - name: Create CodeDeploy Deployment
         id: deploy
         run: |
-          readarray -t deploy_array < <(aws deploy create-deployment \
+          deploy_id_json = $(aws deploy create-deployment \
             --application-name invasion-discord-bot \
             --deployment-group-name invasion-bot-deploy-group \
             --deployment-config-name CodeDeployDefault.OneAtATime \
             --github-location repository=${{ github.repository }},commitId=${{ github.sha }})
-          declare -p deploy_array
+         aws deploy wait deployment-successful --cli-input-json $deploy_id_json
