--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -47,5 +47,5 @@ jobs:
             --deployment-group-name invasion-bot-deploy-group \
             --deployment-config-name CodeDeployDefault.OneAtATime \
             --github-location repository=${{ github.repository }},commitId=${{ github.sha }})
-          deploy_id=echo $deploy_id_json | cut -d' ' -f3 | tr -d '"'
+          deploy_id=$(echo $deploy_id_json | cut -d' ' -f3 | tr -d '"')
           aws deploy wait deployment-successful --deployment-id $deploy_id
